dev_appcolor/v4.0/appcolor-dev-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appcolor
    versao: v4.0
  name: appcolor-dev-route-v4.0
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appcolor-dev-svc-v4-0
    weight: 100
  port:
    targetPort: appcolor-dev-svc-port-v4-0
  wildcardPolicy: None
